# Path-tracer

./: README.md
math/: Cargo.toml
math/src/: bounds.rs  lib.rs  matrix.rs  numerics.rs  onb.rs  vector.rs
pt/: Cargo.toml
pt/.cargo/: config.toml
pt/scenes-test/lt_white_sphere/: scene.json
pt/scenes-test/simple_mis_white_sphere/: scene.json
pt/scenes-test/simple_mis_white_sphere_glass/: scene.json
pt/scenes-test/simple_mis_white_sphere_skip/: scene.json
pt/scenes-test/simple_nee_white_sphere/: scene.json
pt/scenes-test/simple_nee_white_sphere_glass/: scene.json
pt/scenes-test/simple_pt_white_sphere/: scene.json
pt/scenes-test/simple_pt_white_sphere_glass/: scene.json
pt/scenes/cornell-box/: icosphere_2_shaded.ply  scene_v3.xml
pt/scenes/cornell-box-guided/: scene_v3.xml
pt/scenes/veach-bidir/: scene_v3.xml
pt/scenes/veach-mis/: scene_v3.xml
pt/src/: bsdfs.rs  bvh.rs  camera.rs  geom.rs  io_bridge.rs  lighting.rs  main.rs  sampling.rs  scene.rs  sg.rs  spaces.rs
pt/src/integrator/: light_path_tracer.rs  mod.rs  path_tracer.rs
pt/src/integrator/path_guiding/: dtree.rs  mod.rs  stree.rs
pt/src/parser/: icosphere_6.ply  mod.rs
pt/src/spectrum/: cie_data.rs  mod.rs  rgb2spec.rs
sky/: Cargo.toml
sky/sky/: Cargo.toml
sky/sky/src/: common.rs  lib.rs  preetham.rs
sky/sky/src/hosek/: data_rgb.rs  data_sun.rs  mod.rs
