cargo-features = ["edition2024"]

[package]
name = "pt"
version = "0.1.0"
edition = "2024"

[dependencies]
arrayvec = "0.7.6"
cargo-show-asm = "0.2.48"
flate2 = "1.1.1"
itertools = "0.14.0"
math = { path = "../math" }
sky = { path = "../sky/sky" }
num = "0.4.3"
obj = "0.10.2"
ply-rs = "0.1.3"
rand = { version = "0.9.1", features = ["small_rng"] }
rayon = "1.10.0"
roxmltree = "0.20.0"
serde = "1.0.216"
serde_ignored = "0.1.11"
serde_json = "1.0.140"
stb_image_write_rust = "1.16.1"

[profile.test]
opt-level = 3

[profile.release-lto]
inherits = "release"
lto = "fat"
